sumo/tests/sumo/output/e2/errors/freq_negative/errors.sumo
Error: Negative sampling frequency (in e2Detector '4/1to3/1').
Quitting (on error).
